# agents

./: Makefile  README.md  instruct_ions.md  lessons.md  pyproject.toml  report.md  skills_and_instruct_ions.md  skills_and_instructions.md  worklog.md
.agents/skills/global.git-commit.instructions/: SKILL.md
.agents/skills/global.worklog.instructions/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: global.worklog.instructions.md
.github/skills/worklog-manager/: SKILL.md
data/: worklog.json
investment/: INVESTMENT.md  main.py
investment/fundamental_agent/: run.py
investment/manager_agent/: run.py
investment/news_agent/: run.py
investment/quant_agent/: run.py
kospi-50/: AGENTS.md  main.py
kospi-50/agents/daily_stock/: AGENT.md  run.py
kospi-50/agents/fundamentals/: AGENT.md  run.py
kospi-50/agents/validator/: AGENT.md  run.py
scripts/: install-skills.sh  sync_skills.sh  update_vscode_settings.py
